--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "homepage": "https://github.com/bryanbilek/rest-api-practice#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "knex": "^0.95.4",
     "nodemon": "^2.0.7",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "sqlite3": "^5.0.2"
   }
 }
